--- a/src/index.html
+++ b/src/index.html
@@ -55,30 +55,52 @@
 
 	<div class="adventages">
 		<div class="container">
-			<div class="adventages__header">НАШИ ПРЕИМУЩЕСТВА</div>
-			<div class="adventages__icons">
-				<div class="adventages__icon">
-					<i class="ic_cup"></i>
-					<div class="adventages__title">Делимся опытом</div>
-					<div class="adventages__descr">
-						Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+			<h2 class="title">НАШИ ПРЕИМУЩЕСТВА</р>
+				<div class="adventages__icons">
+					<div class="adventages__icon">
+						<i class="ic_cup"></i>
+						<div class="adventages__title">Делимся опытом</div>
+						<div class="adventages__descr">
+							Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор,
+							готовятся к соревнованиям по триатлону!
+						</div>
+					</div>
+					<div class="adventages__icon">
+						<i class="ic_heart"></i>
+						<div class="adventages__title">Заботимся о здоровье</div>
+						<div class="adventages__descr">
+							Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и
+							Вашим близким!
+						</div>
+					</div>
+					<div class="adventages__icon">
+						<i class="ic_shoe"></i>
+						<div class="adventages__title">Учим бегать</div>
+						<div class="adventages__descr">
+							Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I
+								LOVE RUNNING.</a>
+						</div>
 					</div>
 				</div>
-				<div class="adventages__icon">
-					<i class="ic_heart"></i>
-					<div class="adventages__title">Заботимся о здоровье</div>
-					<div class="adventages__descr">
-						Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
-					</div>
-				</div>
-				<div class="adventages__icon">
-					<i class="ic_shoe"></i>
-					<div class="adventages__title">Учим бегать</div>
-					<div class="adventages__descr">
-						Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России -  <a href="#">I LOVE RUNNING.</a>
-					</div>
-				</div>
+		</div>
+	</div>
+
+	<div class="consultation">
+		<div class="container">
+			<h2 class="title title__left">
+				Получите бесплатную консультацию по подбору пульсометра
+			</h2>
+			<div class="consultation__description">
+				Просто заполните форму заявки<br>
+				и мы перезвоним вам в течении 10 минут
 			</div>
+			<form action="#" class="feed-form">
+				<input name="name" required placeholder="Ваше имя" type="text">
+				<input name="tel" required placeholder="Ваш телефон" type="number">
+				<input name="email" required placeholder="Ваш E-mail" type="email">
+
+				<button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+			</form>
 		</div>
 	</div>
 
